--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@1,900&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -12,6 +13,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     background-color: white;
+    
   }
 }
 
